# ComputerGraphics-Project1

./: .gitignore  CMakeLists.txt  README.md
scenes/: scene01.xml  scene03.xml
src/: CMakeLists.txt
src/core/: app.cpp  app.hpp  background.cpp  background.hpp  camera.hpp  common.hpp  film.cpp  film.hpp  geometry.cpp  geometry.hpp  image_io.cpp  integrator.cpp  integrator.hpp  main.cpp  material.hpp  paramset.hpp  parser.cpp  parser.hpp  primitive.hpp  ray.hpp  scene.hpp  sphere.cpp  sphere.hpp  surfel.hpp
src/extras/: pbar.cpp  pbar.hpp
